// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Navbar.vue { isOpened: false } renders correctly 1`] = `
<nav
  aria-label="main navigation"
  class="navbar is-primary"
  role="navigation"
>
  <div
    class="navbar-brand"
  >
    <a
      class="navbar-item"
    >
      <img
        alt="Buefy"
        height="28"
        src="~assets/buefy.png"
      />
    </a>
     
    <a
      aria-label="menu"
      class="navbar-burger burger"
      role="button"
      tabindex="0"
    >
      <span
        aria-hidden="true"
      />
       
      <span
        aria-hidden="true"
      />
       
      <span
        aria-hidden="true"
      />
    </a>
  </div>
   
  <div
    class="navbar-menu"
  >
    <div
      class="navbar-start"
    />
     
    <div
      class="navbar-end"
    >
      <div
        class="navbar-item has-dropdown is-hoverable"
      >
        <span
          aria-haspopup="true"
          class="navbar-link"
          tabindex="0"
        >
          <flag-stub
            iso="us"
          />
           English
        
        </span>
         
        <div
          class="navbar-dropdown is-right"
        >
          <a
            class="navbar-item"
          >
            <flag-stub
              iso="jp"
            />
             
            <span>
               日本語
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`components/Navbar.vue { isOpened: true } renders correctly 1`] = `
<nav
  aria-label="main navigation"
  class="navbar is-primary"
  role="navigation"
>
  <div
    class="navbar-brand"
  >
    <a
      class="navbar-item"
    >
      <img
        alt="Buefy"
        height="28"
        src="~assets/buefy.png"
      />
    </a>
     
    <a
      aria-label="menu"
      class="navbar-burger burger"
      role="button"
      tabindex="0"
    >
      <span
        aria-hidden="true"
      />
       
      <span
        aria-hidden="true"
      />
       
      <span
        aria-hidden="true"
      />
    </a>
  </div>
   
  <div
    class="navbar-menu is-active"
  >
    <div
      class="navbar-start"
    />
     
    <div
      class="navbar-end"
    >
      <div
        class="navbar-item has-dropdown is-hoverable"
      >
        <span
          aria-haspopup="true"
          class="navbar-link"
          tabindex="0"
        >
          <flag-stub
            iso="us"
          />
           English
        
        </span>
         
        <div
          class="navbar-dropdown is-right"
        >
          <a
            class="navbar-item"
          >
            <flag-stub
              iso="jp"
            />
             
            <span>
               日本語
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</nav>
`;
